// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`./NetworkLogosList.stories FourNetworks 1`] = `
<div
  style="background-color: rgb(255, 255, 255); padding: 1rem;"
>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 mui-style-1xulk7h-MuiPaper-root"
    style="--Paper-shadow: none;"
  >
    <div
      class="networks MuiBox-root mui-style-0"
    >
      <span
        class="MuiSkeleton-root MuiSkeleton-rectangular MuiSkeleton-pulse mui-style-18ae3nr-MuiSkeleton-root"
        style="width: 100%; height: 22px;"
      />
      <span
        class="MuiSkeleton-root MuiSkeleton-rectangular MuiSkeleton-pulse mui-style-18ae3nr-MuiSkeleton-root"
        style="width: 100%; height: 22px;"
      />
      <span
        class="MuiSkeleton-root MuiSkeleton-rectangular MuiSkeleton-pulse mui-style-18ae3nr-MuiSkeleton-root"
        style="width: 100%; height: 22px;"
      />
      <span
        class="MuiSkeleton-root MuiSkeleton-rectangular MuiSkeleton-pulse mui-style-18ae3nr-MuiSkeleton-root"
        style="width: 100%; height: 22px;"
      />
    </div>
  </div>
</div>
`;

exports[`./NetworkLogosList.stories ManyNetworksWithHasMore 1`] = `
<div
  style="background-color: rgb(255, 255, 255); padding: 1rem;"
>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 mui-style-1xulk7h-MuiPaper-root"
    style="--Paper-shadow: none;"
  >
    <div
      class="networks MuiBox-root mui-style-0"
    >
      <span
        class="MuiSkeleton-root MuiSkeleton-rectangular MuiSkeleton-pulse mui-style-18ae3nr-MuiSkeleton-root"
        style="width: 100%; height: 22px;"
      />
      <span
        class="MuiSkeleton-root MuiSkeleton-rectangular MuiSkeleton-pulse mui-style-18ae3nr-MuiSkeleton-root"
        style="width: 100%; height: 22px;"
      />
      <span
        class="MuiSkeleton-root MuiSkeleton-rectangular MuiSkeleton-pulse mui-style-18ae3nr-MuiSkeleton-root"
        style="width: 100%; height: 22px;"
      />
      <span
        class="MuiSkeleton-root MuiSkeleton-rectangular MuiSkeleton-pulse mui-style-18ae3nr-MuiSkeleton-root"
        style="width: 100%; height: 22px;"
      />
      <div
        class="moreChainsIndicator MuiBox-root mui-style-0"
      >
        +
        2
      </div>
    </div>
  </div>
</div>
`;

exports[`./NetworkLogosList.stories ManyNetworksWithoutHasMore 1`] = `
<div
  style="background-color: rgb(255, 255, 255); padding: 1rem;"
>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 mui-style-1xulk7h-MuiPaper-root"
    style="--Paper-shadow: none;"
  >
    <div
      class="networks MuiBox-root mui-style-0"
    >
      <span
        class="MuiSkeleton-root MuiSkeleton-rectangular MuiSkeleton-pulse mui-style-18ae3nr-MuiSkeleton-root"
        style="width: 100%; height: 22px;"
      />
      <span
        class="MuiSkeleton-root MuiSkeleton-rectangular MuiSkeleton-pulse mui-style-18ae3nr-MuiSkeleton-root"
        style="width: 100%; height: 22px;"
      />
      <span
        class="MuiSkeleton-root MuiSkeleton-rectangular MuiSkeleton-pulse mui-style-18ae3nr-MuiSkeleton-root"
        style="width: 100%; height: 22px;"
      />
      <span
        class="MuiSkeleton-root MuiSkeleton-rectangular MuiSkeleton-pulse mui-style-18ae3nr-MuiSkeleton-root"
        style="width: 100%; height: 22px;"
      />
      <span
        class="MuiSkeleton-root MuiSkeleton-rectangular MuiSkeleton-pulse mui-style-18ae3nr-MuiSkeleton-root"
        style="width: 100%; height: 22px;"
      />
    </div>
  </div>
</div>
`;

exports[`./NetworkLogosList.stories SingleNetwork 1`] = `
<div
  style="background-color: rgb(255, 255, 255); padding: 1rem;"
>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 mui-style-1xulk7h-MuiPaper-root"
    style="--Paper-shadow: none;"
  >
    <div
      class="networks MuiBox-root mui-style-0"
    >
      <span
        class="MuiSkeleton-root MuiSkeleton-rectangular MuiSkeleton-pulse mui-style-18ae3nr-MuiSkeleton-root"
        style="width: 100%; height: 22px;"
      />
    </div>
  </div>
</div>
`;

exports[`./NetworkLogosList.stories TwoNetworks 1`] = `
<div
  style="background-color: rgb(255, 255, 255); padding: 1rem;"
>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 mui-style-1xulk7h-MuiPaper-root"
    style="--Paper-shadow: none;"
  >
    <div
      class="networks MuiBox-root mui-style-0"
    >
      <span
        class="MuiSkeleton-root MuiSkeleton-rectangular MuiSkeleton-pulse mui-style-18ae3nr-MuiSkeleton-root"
        style="width: 100%; height: 22px;"
      />
      <span
        class="MuiSkeleton-root MuiSkeleton-rectangular MuiSkeleton-pulse mui-style-18ae3nr-MuiSkeleton-root"
        style="width: 100%; height: 22px;"
      />
    </div>
  </div>
</div>
`;
